Ajout du dossier Tableau, édition du readme.

--- a/Annuaire/index.html
+++ b/Annuaire/index.html
@@ -16,7 +16,7 @@
 	</div>
 
     <div class="form">
-	    <input id="research" placeholder="Research" autocomplete="off" />
+	    <input id="research" placeholder="Search by first name, last name or phone number" autocomplete="off" />
 	    <button id="search">Search</button>
 	</div>
 	<div class="form">
