Légère modification de l'exercice Tableau

--- a/Tableau/index.html
+++ b/Tableau/index.html
@@ -6,8 +6,8 @@
 <body>
     <div class="form">
     	<input id="texte" placeholder="Nom" autocomplete="off">
-		<button id="ajouter">Ajouter</button>
-		<button id="annuler">Annuler</button>
+		<button id="btnAjouter">Ajouter</button>
+		<button id="btnAnnuler">Annuler</button>
 		<ul id="liste"></ul>
 	</div>
 <script src="js/tableau.js"></script>
